fix html tag overflow-x to hidden

--- a/deliver/css/style.css
+++ b/deliver/css/style.css
@@ -63,6 +63,7 @@ html {
   font-weight: 500;
   letter-spacing: 0.34px;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
